--- a/jiraapplication/src/App.css
+++ b/jiraapplication/src/App.css
@@ -1,42 +1,34 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.task-form {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-create {
+  width: 450px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.task-label {
+  margin: 10px 0px;
 }
 
-.card {
-  padding: 2em;
+.task-input {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.task-button {
+  margin: 10px 0px;
+  padding: 10px;
+  border: 1px solid red;
+  border-radius: 10px;
+  color: white;
+  background-color: red;
+  font-size: 20px;
 }
