--- a/jiraapplication/src/App.css
+++ b/jiraapplication/src/App.css
@@ -13,6 +13,10 @@
   width: 450px;
 }
 
+.task-update {
+  width: 100%;
+}
+
 .task-label {
   margin: 10px 0px;
 }
@@ -26,9 +30,56 @@
 .task-button {
   margin: 10px 0px;
   padding: 10px;
-  border: 1px solid red;
+  border: 1px solid rgb(200, 192, 172);
   border-radius: 10px;
   color: white;
-  background-color: red;
+  background-color: rgb(200, 192, 172);
   font-size: 20px;
+}
+
+.update-button {
+  background-color: rgb(138, 133, 117);
+}
+
+.task-show {
+  border: 5px solid rgb(200, 192, 172);
+  border-radius: 30px;
+  width: 350px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.task-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.task-delete {
+  padding: 5px;
+  font-size: 15px;
+  width: 70px;
+  border: none;
+  border-radius: 30px;
+  background-color: red;
+  color: white;
+  margin-right: 10px;
+}
+
+.task-edit {
+  padding: 5px;
+  font-size: 15px;
+  width: 100px;
+  border: none;
+  border-radius: 30px;
+  background-color: rgb(37, 37, 174);
+  color: white;
+  margin-right: 10px;
+}
+
+.task-title {
+  margin-bottom: 10px;
 }
