--- a/courseSearch/src/App.css
+++ b/courseSearch/src/App.css
@@ -1,42 +1,76 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.courseForm {
+  margin-top: 15px;
+  padding: 15px;
+}
+.courseForm .field-group {
+  display: flex;
+  margin-bottom: 0px;
+}
+.courseForm form {
+  display: flex;
+  justify-content: space-between;
+}
+.courseForm .field {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0px !important;
+  margin-right: 10px;
+}
+.courseForm .field label.label {
+  margin-bottom: 0px;
+  margin-right: 10px;
+}
+.courseForm input {
+  width: 100%;
+}
+.courseForm h4.subtitle.is-3 {
+  margin-bottom: 0.75rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.courseList h1 {
+  font-size: 24px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.courseList .panel.bold {
+  font-weight: 600;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.courseList .panel {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #dbdbdb;
+  border-radius: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.courseList .note {
+  font-style: italic;
+  display: block;
+  margin: 40px 20px;
 }
 
-.card {
-  padding: 2em;
+.listHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.read-the-docs {
-  color: #888;
+.listHeader h3.title {
+  margin-bottom: 0px;
+}
+
+.listHeader .search {
+  display: flex;
+  align-items: center;
+}
+.listHeader .search .label {
+  margin-bottom: 0px;
+  margin-right: 10px;
+}
+
+.coursePrice {
+  text-align: right;
+  font-size: 2rem;
 }
