--- a/personsApp/src/App.css
+++ b/personsApp/src/App.css
@@ -5,6 +5,21 @@
   margin: 20px;
 }
 .panelDiv {
-  background-color: rgba(255, 0, 0, 0.381);
+  background-color: lightgrey;
   border-radius: 30px;
+}
+.photoDiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.deleteCircularDiv {
+  position: absolute;
+  font-size: 30px;
+  top: 50%;
+  left: 50%;
+  color: white;
+  transform: translate(-50%, -50%);
 }
